Fix nav bar overflow

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 @media (display-mode: standalone) {
